// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders the UI snapshot correctly 1`] = `
<a
  className="css-1xdhyk6"
  href="#passed-in-link"
  id="standard-link"
  rel={null}
  target={null}
>
  Standard
</a>
`;

exports[`Link renders the UI snapshot correctly 2`] = `
<a
  className="css-1xdhyk6"
  href="#passed-in-link"
  id="forwards-link"
  rel={null}
  target={null}
>
  Forwards
  <span>
    <svg
      aria-hidden={true}
      className="chakra-icon more-link css-1grhd2q"
      focusable={false}
      id="forwards-link-icon"
      role="img"
      title="arrow icon"
      viewBox="0 0 24 24"
    >
      <g
        stroke="currentColor"
        strokeWidth="1.5"
      >
        <path
          d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
          fill="none"
          strokeLinecap="round"
        />
        <path
          d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
          fill="currentColor"
          strokeLinecap="round"
        />
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="11.25"
          strokeMiterlimit="10"
        />
      </g>
    </svg>
  </span>
</a>
`;

exports[`Link renders the UI snapshot correctly 3`] = `
<a
  className="css-1xdhyk6"
  href="#passed-in-link"
  id="backwards-link"
  rel={null}
  target={null}
>
  <span>
    <svg
      aria-hidden={true}
      className="chakra-icon more-link css-1grhd2q"
      focusable={false}
      id="backwards-link-icon"
      role="img"
      title="arrow icon"
      viewBox="0 0 24 24"
    >
      <g
        stroke="currentColor"
        strokeWidth="1.5"
      >
        <path
          d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
          fill="none"
          strokeLinecap="round"
        />
        <path
          d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
          fill="currentColor"
          strokeLinecap="round"
        />
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="11.25"
          strokeMiterlimit="10"
        />
      </g>
    </svg>
  </span>
  Backwards
</a>
`;

exports[`Link renders the UI snapshot correctly 4`] = `
<a
  className="css-1xdhyk6"
  href="#passed-in-link"
  id="external-link"
  rel="nofollow"
  target="_blank"
>
  External
  <span>
    <svg
      aria-hidden={true}
      className="chakra-icon more-link css-1grhd2q"
      focusable={false}
      id="external-link-icon"
      role="img"
      title="actionLaunch icon"
      viewBox="0 0 24 24"
    >
      <g
        stroke="currentColor"
        strokeWidth="1.5"
      >
        <path
          d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
          fill="none"
          strokeLinecap="round"
        />
        <path
          d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
          fill="currentColor"
          strokeLinecap="round"
        />
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="11.25"
          strokeMiterlimit="10"
        />
      </g>
    </svg>
  </span>
</a>
`;

exports[`Link renders the UI snapshot correctly 5`] = `
<a
  className="css-1xdhyk6"
  href="#passed-in-link"
  id="button-link"
  rel={null}
  target={null}
>
  Button
</a>
`;

exports[`Link renders the UI snapshot correctly 6`] = `
<a
  className="css-1xdhyk6"
  href="#passed-in-link"
  id="icon-link"
  rel={null}
  target={null}
>
  <span>
    <svg
      aria-hidden={true}
      className="chakra-icon more-link css-1grhd2q"
      focusable={false}
      id="link-icon"
      role="img"
      title="download icon"
      viewBox="0 0 24 24"
    >
      <g
        stroke="currentColor"
        strokeWidth="1.5"
      >
        <path
          d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
          fill="none"
          strokeLinecap="round"
        />
        <path
          d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
          fill="currentColor"
          strokeLinecap="round"
        />
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="11.25"
          strokeMiterlimit="10"
        />
      </g>
    </svg>
  </span>
  Download
</a>
`;

exports[`Link renders the UI snapshot correctly 7`] = `
<span
  className="css-0"
>
  <a
    className="css-0"
    href="#existing-anchor-tag"
    id="anchor-link"
    rel={null}
    target={null}
  >
    check link
  </a>
</span>
`;

exports[`Link renders the UI snapshot correctly 8`] = `
<span
  className="css-0"
>
  <span>
    <svg
      aria-hidden={true}
      className="chakra-icon css-1grhd2q"
      focusable={false}
      id="link-icon"
      role="img"
      title="check icon"
      viewBox="0 0 24 24"
    >
      <g
        stroke="currentColor"
        strokeWidth="1.5"
      >
        <path
          d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
          fill="none"
          strokeLinecap="round"
        />
        <path
          d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
          fill="currentColor"
          strokeLinecap="round"
        />
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="11.25"
          strokeMiterlimit="10"
        />
      </g>
    </svg>
  </span>
  <a
    href="#existing-anchor-tag"
  >
    check link
  </a>
</span>
`;

exports[`Link renders the UI snapshot correctly 9`] = `
<a
  className="css-kle7zy"
  href="#passed-in-link"
  id="chakra"
  rel={null}
  target={null}
>
  Standard
</a>
`;

exports[`Link renders the UI snapshot correctly 10`] = `
<a
  className="css-1xdhyk6"
  data-testid="props"
  href="#passed-in-link"
  id="props"
  rel={null}
  target={null}
>
  Standard
</a>
`;
